JDK 21: updated readme; added note to indicate which example I've used JDK built from main branch